<resources>
    <string name="app_name">travel</string>
    <string name="imgWorld">Globe</string>
    <string name="splash_TxtWelcome">Welcome To Travel With Us!</string>
    <string name="splash_btnTravel">Start Travel</string>
    <string name="login_Title">Welcome To Travel With Us</string>
    <string name="login_TxtUsername">Username</string>
    <string name="login_password">Password</string>
    <string name="login_btnSignup">Signup</string>
    <string name="login_btnLogin">Login</string>
    <string name="reg_txt_title">Registration</string>
    <string name="app_label">Search</string>
    <string name="search_hint">Search for destinations</string>
    <string name="search">Location Search</string>
    <string name="reg_firstName">First Name</string>
    <string name="reg_lastName">Last Name</string>
    <string name="reg_email">Email Address</string>
    <string name="reg_UserName">Username</string>
    <string name="reg_Password">Password</string>
    <string name="reg_ConPass">Confirm Password</string>
    <string name="reg_register">Register</string>
    <string name="reg_cancel">Cancel</string>
    <string name="user_dash">Load User</string>
    <string name="destination">Destination</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="price_lbl">Price Per Night/Person</string>
    <string name="contact_info">For more information contact:</string>
    <string name="america_label">America\'s Top 5 Destinations</string>
    <string name="ny">New York City, NY</string>
    <string name="ny_price_lbl">Price Per Night/Person</string>
    <string name="ny_price">$294</string>
    <string name="ny_description">
        The largest and most populated city in the USA, New York City is often called the “city that never sleeps” because it is constantly buzzing with activity.
    </string>
    <string name="gc">Grand Canyon, AZ</string>
    <string name="gc_price_lbl">Price Per Night/Person</string>
    <string name="gc_price">$279</string>
    <string name="gc_description">
        Attracting millions of visitors every year, the Grand Canyon is one of the best places to visit in the USA. Located in northern Arizona, this massive natural wonder was carved by the Colorado River over a period of several million years.
    </string>
    <string name="yellow">Yellowstone, WY</string>
    <string name="yellow_price_lbl">Price Per Night/Person</string>
    <string name="yellow_price">$103 </string>
    <string name="yellow_description">
        Yellowstone National Park was the world’s first national park, set aside in 1872 to preserve the vast number of geysers and hot springs, as well as to protect the incredible wildlife and rugged beauty of the area.
    </string>
    <string name="maui">Maui, HI</string>
    <string name="maui_price_lbl">Price Per Night/Person</string>
    <string name="maui_price">$355</string>
    <string name="maui_description">
        Nicknamed “The Valley Isle,” due to the great valley that lies between its two major volcanoes, Maui is known for its stunning natural beauty as well as its high-end luxury resorts and popular tourist attractions.
    </string>
    <string name="yosemite">Yosemite, CA</string>
    <string name="yosemite_price_lbl">Price Per Night/Person</string>
    <string name="yosemite_price">$496</string>
    <string name="yosemite_description">
        One of the most visited national parks in the United States, Yosemite National Park is prized for its jaw-dropping beauty that comprises magnificent granite cliffs, mountains, waterfalls and glaciers.
    </string>
    <string name="us_contact_info">For more information contact:</string>
    <string name="us_contact">John Rich - jr@travelwithus.com (555) 444- 4444</string>
    <string name="australia_label">Australia\'s Top 5 Destinations</string>
    <string name="sydney">Sydney, AU</string>
    <string name="sy_price_lbl">Price Per Night/Person</string>
    <string name="sy_price">$115</string>
    <string name="sy_description">
        Surrounded by the beautiful scenery of the Sydney Harbour and the Royal Botanic Gardens, the famous Opera House in Sydney is one of Australia’s most famous landmarks.
    </string>
    <string name="cairns">Cairns, AU</string>
    <string name="cairns_price_lbl">Price Per Night/Person</string>
    <string name="cairns_price">$124</string>
    <string name="cairns_description">
        One of the top destinations for underwater explorers and scuba divers is the world’s largest barrier reef system, famously known as the Great Barrier Reef.
    </string>
    <string name="yulara">Yulara, AU</string>
    <string name="yulara_price_lbl">Price Per Night/Person</string>
    <string name="yulara_price">$500</string>
    <string name="yulara_description">
        One of the world’s largest monoliths, Ayers Rock is also one of the top tourist attractions in Australia. Located within the Uluru-Kata Tjuta National Park of the Northern Territory, this large sandstone formation stands more than 340 meters (1,100 feet) high.
    </string>
    <string name="darwin">Darwin, AU</string>
    <string name="darwin_price_lbl">Price Per Night/Person</string>
    <string name="darwin_price">$102</string>
    <string name="darwin_description">
        Located in Australia’s Northern Territory, about three hours north of Darwin, Kakadu is the country’s largest national park.
    </string>
    <string name="whitsunday">Queensland, AU</string>
    <string name="whitsunday_price_lbl">Price Per Night/Person</string>
    <string name="whitsunday_price">$256</string>
    <string name="whitsunday_description"><![CDATA[ Most of the Whitsunday Islands are deserted, seven do have outstanding resorts on them, including the world-famous One&Only on Hayman Island, a favorite of celebrities and the rich and famous.
    ]]></string>
    <string name="australia_contact_info">For more information contact:</string>
    <string name="australia_contact">Ray Underbarb - ru@travelwithus.com  (555)111-1111</string>
    <string name="china_label">Beijing\'s Top 5 Destinations</string>
    <string name="beijing">Beijing, China</string>
    <string name="beijing_price_lbl">Price Per Night/Person</string>
    <string name="beijing_price">$137</string>
    <string name="beijing_description">
        The Forbidden City is one of the world’s great palaces, ranking right up there with the Kremlin, Buckingham Palace and Versailles. It is unarguably the most popular tourist attraction in Beijing, with the crowds to prove it.
    </string>
    <string name="HK">Hong Kong, China</string>
    <string name="hk_price_lbl">Price Per Night/Person</string>
    <string name="hk_price">$101</string>
    <string name="hk_description">
        Nicknamed the Oriental Pearl, Hong Kong is one of Asia’s most traveled destinations thanks to its spectacular natural beauty and man-made marvels.
    </string>
    <string name="xian">Xi\'an, China</string>
    <string name="xian_price_lbl">Price Per Night/Person</string>
    <string name="xian_price">$60</string>
    <string name="xian_description">
        The history of Xi’an is one of its biggest draws. It was the start of the once indispensable Silk Road that made commerce between many countries in Eurasia possible.
    </string>
    <string name="sha">Shanghai, China</string>
    <string name="sha_price_lbl">Price Per Night/Person</string>
    <string name="sha_price">$106</string>
    <string name="sha_description">
        Located on the East China Sea and the mouth of the Yangtze River, Shanghai is the largest city and most developed city in China.
    </string>
    <string name="yan">Yangshuo, China</string>
    <string name="yan_price_lbl">Price Per Night/Person</string>
    <string name="yan_price">$88</string>
    <string name="yan_description">
        Yangshuo was once a magnet for backpackers because of its cheap prices and laid-back atmosphere, but today it draws all sorts of travelers to enjoy its scenic beauty.
    </string>
    <string name="china_contact_info">For more information contact:</string>
    <string name="china_contact">Wang Fang - wf@travelwithus.com  (555) 222-2222</string>
    <string name="in_label">India\'s Top 5 Destinations</string>
    <string name="ra">Rajasthan, India</string>
    <string name="ra_price_lbl">Price Per Night/Person</string>
    <string name="ra_price">$675</string>
    <string name="ra_description">
        Northwest India is where you’ll find the state of Rajasthan, which borders Pakistan and is home to the Thar Desert. Whether you’re interested in Rajput history or views of the Aravallis Mountains, Rajasthan contains some of the best places to visit in India.
    </string>
    <string name="ag">Agra, India</string>
    <string name="ag_price_lbl">Price Per Night/Person</string>
    <string name="ag_price">$79</string>
    <string name="ag_description">
        Once the capital of the Mughal Empire, Agra is now home to the iconic structure known as the Taj Mahal. The white marble mausoleum was built in the 17th century, and it is widely regarded as a monument of love.
    </string>
    <string name="ker">Kerala, India</string>
    <string name="ker_price_lbl">Price Per Night/Person</string>
    <string name="ker_price">$94</string>
    <string name="ker_description">
        The southwestern state of India known as Kerala is a place of tropical beauty. Palm trees, white sand beaches and eco-tourism are all big reasons to explore the region.
    </string>
    <string name="var">Varanasi, India</string>
    <string name="var_price_lbl">Price Per Night/Person</string>
    <string name="var_price">$42</string>
    <string name="var_description">
        On the banks of the River Ganges is Varanasi, an ancient city known as the spiritual capital of India. The city’s history dates back for more than 3,000 years, making it one of the oldest continually inhabited cities on the planet.
    </string>
    <string name="mah">Maharashtra, India</string>
    <string name="mah_price_lbl">Price Per Night/Person</string>
    <string name="mah_price">$139</string>
    <string name="port">Porto, PT</string>
    <string name="port_price">$103</string>
    <string name="port_description">
        After Lisbon, Porto is Portugal’s second largest city. It’s a city that is fast becoming a top travel destination in western Europe. Explore Porto from its narrow streets in the old town section of Ribeira to the grand plazas in the newer sections.
    </string>
    <string name="duo">Douro Valley, PT</string>
    <string name="duo_price">$172</string>
    <string name="duo_description">
        The Douro Valley was just made to grace picture postcards! Its scenic landscapes are just one of the reasons Travel +Leisure magazine named it No. 8 on its list of places to visit in 2017.
    </string>
    <string name="gui">Guimaraes, PT</string>
    <string name="gui_price">$79</string>
    <string name="gui_description">
        Sometimes it’s fun to go back to the beginning of things, in which case you’ll want to visit Guimaraes, regarded as the birthplace of Portugal.
    </string>
    <string name="bra">Braga, PT</string>
    <string name="bra_price">$63</string>
    <string name="bra_description">
        Braga is considered the most religious town in Portugal. Portugal’s third largest city has so many churches and monuments, trying to see them all on a day trip from Porto just can’t be done.
    </string>
    <string name="via">Vian do Castelo, PT</string>
    <string name="via_price">$83</string>
    <string name="via_description">
        Viana do Castelo is an historic port city that was one of the places Portuguese explorers headed to when they returned from their voyages of discovery.
    </string>
    <string name="port_contact">Jose Cruz - jc@travelwithus.com  (555) 666-6666</string>
</resources>