<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/vintage_plain"
        tools:context=".locations.AmericaActivity">

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent">
        <TextView
                android:text="@string/prt_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:id="@+id/textView"
                android:textColor="@android:color/black"
                android:textStyle="bold|italic"
                android:textAllCaps="true"
                android:textSize="22sp"
                android:textAlignment="center"
                android:layout_alignParentTop="true"/>

        <RelativeLayout android:id="@+id/relativeView2"
                        android:layout_below="@id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

            <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/china_tablelayout"
                    android:stretchColumns="0,1,2"
                    android:gravity="center"
                    android:layout_margin="2dp">

                <TableRow android:layout_width="match_parent" android:layout_height="0dp" android:layout_margin="2dp"
                          android:layout_weight="1" >
                    <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                              android:layout_margin="3dp"
                              android:layout_column="0"
                              android:textStyle="bold"
                              android:textColor="#000000"
                              android:gravity="center"
                              android:text="@string/destination"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                              android:layout_margin="3dp"
                              android:layout_column="1"
                              android:textStyle="bold"
                              android:textColor="#000000"
                              android:gravity="center"
                              android:text="@string/price"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                              android:layout_margin="3dp"
                              android:layout_column="2"
                              android:textStyle="bold"
                              android:gravity="center"
                              android:textAlignment="center"
                              android:textColor="#000000"
                              android:text="@string/description" android:layout_weight="1"/>
                </TableRow>
                <TableRow android:layout_width="match_parent" android:layout_height="0dp" android:layout_margin="2dp"
                          android:layout_weight="1" android:background="#000000">
                    <TableRow android:layout_width="match_parent" android:layout_height="0dp" android:layout_margin="2dp"
                              android:layout_weight="1" android:background="#000000" >
                    </TableRow>
                </TableRow>
                <TableRow android:layout_width="match_parent" android:layout_height="0dp" android:layout_margin="1dp"
                          android:layout_weight="1">
                    <TextView
                            android:layout_width="wrap_content" android:layout_height="match_parent"
                            android:layout_margin="3dp"
                            android:layout_column="0"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:textColor="#000000"
                            android:text="@string/port" android:textSize="12sp"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                              android:layout_margin="3dp"
                              android:layout_column="1"
                              android:textStyle="bold"
                              android:gravity="center"
                              android:textColor="#000000"
                              android:text="@string/port_price" android:textSize="12sp"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                              android:layout_margin="3dp"
                              android:layout_column="2"
                              android:textStyle="bold"
                              android:textAlignment="textStart"
                              android:textColor="#000000"
                              android:scrollHorizontally="false"
                              android:maxLines="10"
                              android:ellipsize="none"
                              android:text="@string/port_description"
                              android:layout_weight="1" android:textSize="12sp"/>

                </TableRow>
                <TableRow android:layout_width="match_parent" android:layout_height="0dp" android:layout_margin="2dp"
                          android:layout_weight="1" android:background="#000000">
                    <TableRow android:layout_width="match_parent" android:layout_height="0dp" android:layout_margin="2dp"
                              android:layout_weight="1" android:background="#000000" >
                    </TableRow>
                </TableRow>
                <TableRow android:layout_width="match_parent" android:layout_height="0dp" android:layout_margin="2dp"
                          android:layout_weight="1">
                    <TextView
                            android:layout_width="wrap_content" android:layout_height="match_parent"
                            android:layout_margin="3dp"
                            android:layout_column="0"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:textColor="#000000"
                            android:text="@string/duo" android:textSize="12sp"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                              android:layout_margin="3dp"
                              android:layout_column="1"
                              android:textStyle="bold"
                              android:gravity="center"
                              android:textColor="#000000"
                              android:text="@string/duo_price" android:textSize="12sp"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                              android:layout_margin="3dp"
                              android:layout_column="2"
                              android:textStyle="bold"
                              android:textColor="#000000"
                              android:scrollHorizontally="false"
                              android:maxLines="10"
                              android:layout_weight="1"
                              android:ellipsize="none"
                              android:text="@string/duo_description" android:textAlignment="viewStart"
                              android:textSize="12sp"/>

                </TableRow>

                <TableRow android:layout_width="match_parent" android:layout_height="0dp" android:layout_margin="2dp"
                          android:layout_weight="1" android:background="#000000">
                    <TableRow android:layout_width="match_parent" android:layout_height="0dp" android:layout_margin="2dp"
                              android:layout_weight="1" android:background="#000000" >
                    </TableRow>
                </TableRow>
                <TableRow android:layout_width="match_parent" android:layout_height="0dp" android:layout_margin="2dp"
                          android:layout_weight="1">
                    <TextView
                            android:layout_width="wrap_content" android:layout_height="match_parent"
                            android:layout_margin="3dp"
                            android:layout_column="0"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:textColor="#000000"
                            android:text="@string/gui" android:textSize="12sp"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                              android:layout_margin="3dp"
                              android:layout_column="1"
                              android:textStyle="bold"
                              android:gravity="center"
                              android:textColor="#000000"
                              android:text="@string/gui_price" android:textSize="12sp"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                              android:layout_margin="3dp"
                              android:layout_column="2"
                              android:textStyle="bold"
                              android:textColor="#000000"
                              android:scrollHorizontally="false"
                              android:maxLines="10"
                              android:layout_weight="1"
                              android:ellipsize="none"
                              android:text="@string/gui_description" android:textAlignment="viewStart"
                              android:textSize="12sp"/>

                </TableRow>

                <TableRow android:layout_width="match_parent" android:layout_height="0dp" android:layout_margin="2dp"
                          android:layout_weight="1" android:background="#000000">
                    <TableRow android:layout_width="match_parent" android:layout_height="0dp" android:layout_margin="2dp"
                              android:layout_weight="1" android:background="#000000" >
                    </TableRow>
                </TableRow>
                <TableRow android:layout_width="match_parent" android:layout_height="0dp" android:layout_margin="2dp"
                          android:layout_weight="1">
                    <TextView
                            android:layout_width="wrap_content" android:layout_height="match_parent"
                            android:layout_margin="3dp"
                            android:layout_column="0"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:textColor="#000000"
                            android:text="@string/bra" android:textSize="12sp"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                              android:layout_margin="3dp"
                              android:layout_column="1"
                              android:textStyle="bold"
                              android:gravity="center"
                              android:textColor="#000000"
                              android:text="@string/bra_price" android:textSize="12sp"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                              android:layout_margin="3dp"
                              android:layout_column="2"
                              android:textStyle="bold"
                              android:textColor="#000000"
                              android:scrollHorizontally="false"
                              android:maxLines="10"
                              android:layout_weight="1"
                              android:ellipsize="none"
                              android:text="@string/bra_description" android:textAlignment="viewStart"
                              android:textSize="12sp"/>

                </TableRow>

                <TableRow android:layout_width="match_parent" android:layout_height="0dp" android:layout_margin="2dp"
                          android:layout_weight="1" android:background="#000000">
                    <TableRow android:layout_width="match_parent" android:layout_height="0dp" android:layout_margin="2dp"
                              android:layout_weight="1" android:background="#000000" >
                    </TableRow>
                </TableRow>
                <TableRow android:layout_width="match_parent" android:layout_height="0dp" android:layout_margin="2dp"
                          android:layout_weight="1">
                    <TextView
                            android:layout_width="wrap_content" android:layout_height="match_parent"
                            android:layout_margin="3dp"
                            android:layout_column="0"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:textColor="#000000"
                            android:text="@string/via" android:textSize="12sp"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                              android:layout_margin="3dp"
                              android:layout_column="1"
                              android:textStyle="bold"
                              android:gravity="center"
                              android:textColor="#000000"
                              android:text="@string/via_price" android:textSize="12sp"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="match_parent"
                              android:layout_margin="3dp"
                              android:layout_column="2"
                              android:textStyle="bold"
                              android:textColor="#000000"
                              android:scrollHorizontally="false"
                              android:maxLines="10"
                              android:layout_weight="1"
                              android:ellipsize="none"
                              android:text="@string/via_description" android:textAlignment="viewStart"
                              android:textSize="12sp"/>

                </TableRow>

                <TableRow android:layout_width="match_parent" android:layout_height="0dp" android:layout_margin="2dp"
                          android:layout_weight="1" android:background="#000000">
                    <TableRow android:layout_width="match_parent" android:layout_height="0dp" android:layout_margin="2dp"
                              android:layout_weight="1" android:background="#000000" >
                    </TableRow>
                </TableRow>
            </TableLayout>

        </RelativeLayout>
        <TextView
                android:layout_below="@id/relativeView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/port_contact"
                android:textColor="#000000"
                android:textAlignment="center"
                android:layout_marginRight="5dp" android:layout_marginLeft="5dp" android:layout_marginTop="10dp"
                android:textStyle="bold"/>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>